--- a/styles/global.css
+++ b/styles/global.css
@@ -1,13 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.toggle-checkbox:checked {
-  @apply border-green-400;
-  right: 0;
-  border-color: #68D391;
-}
-.toggle-checkbox:checked + .toggle-label {
-  @apply bg-green-400;
-  background-color: #68D391;
-}
